Fix text wrapping below title headings

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -212,6 +212,10 @@ body {
   }
 }
 
+.flex.flex-row.items-center {
+  flex-wrap: wrap;
+}
+
 .mt-8 {
   margin-top: 1rem;
 }
